clang/test/BSC/Negative/SafeZone/global_variable_modification/global_variable_modification.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// REQUIRES: ENABLE_BSC_FUTURE

// Test for global variable modification in safe zone
// Note: This feature requires ENABLE_BSC_FUTURE macro to be enabled.

int *g;
static int *s;

_Safe void foo(void) {
  // expected-error@+1{{modifying global variable is forbidden in the safe zone}}
  g = nullptr;

  // expected-error@+1{{modifying global variable is forbidden in the safe zone}}
  (g) = nullptr;

  // expected-error@+1{{modifying global variable is forbidden in the safe zone}}
  s = nullptr;

  // ok: reading global variable is allowed
  int *read_g = g;

  // ok: local pointer variable can be assigned nullptr
  int *p = nullptr;

  // ok: _Borrow pointer variable can be assigned nullptr
  int *_Borrow b = nullptr;
}

void test_static_in_function() {
  static int *local_static = nullptr;

  _Safe {
    // ok: reading static variable is allowed
    int *read_static = local_static;

    // expected-error@+1{{modifying global variable is forbidden in the safe zone}}
    local_static = nullptr;
  }
}

_Safe void test_multiple_assignments(void) {
  int *local1 = nullptr;  // ok: local variable
  int *local2 = nullptr;  // ok: local variable

  // expected-error@+1{{modifying global variable is forbidden in the safe zone}}
  g = local1;

  // expected-error@+1{{modifying global variable is forbidden in the safe zone}}
  s = local2;

  // ok: assigning between local variables
  local1 = local2;
}

int main() {
  foo();
  test_static_in_function();
  test_multiple_assignments();
  return 0;
}
